# datastory-collector

./: .env.example  .gitignore  App.jsx  CNAME  Dockerfile  README.md  config.json  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: container.yml  deploy.yml
assets/: index-BKsBEW6K.js  index-B_cWu90R.css  index-CI7B3lvv.css  index-DPllABg1.js
charts/datastory-collector/: Chart.yaml  values.yaml
charts/datastory-collector/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  postgresql.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
components/: LiveLogicPreview.jsx  ManagementView.jsx  MultiInput.jsx  PainPointForm.jsx  ReviewPainPointsView.jsx  Sidebar.jsx  UserProfileModal.jsx  Wizard.jsx  YamlPreview.jsx
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: config.json  env.js
frontend/src/: App.jsx  api.js
frontend/src/components/: EDWBusMatrix.jsx  LibraryView.jsx  LiveLogicPreview.jsx  ManagementView.jsx  MultiInput.jsx  PainPointForm.jsx  ResetConfirmationModal.jsx  ReviewPainPointsView.jsx  Sidebar.jsx  StarRating.jsx  StarSchemaView.jsx  SubmitConfirmationModal.jsx  UserProfileModal.jsx  ViewLayout.jsx  Wizard.jsx  YamlPreview.jsx
scripts/: publish.sh
src/datastory/: __init__.py  build.py  cli.py  config.py  db.py  main.py
src/datastory/service/config/: views.py
src/datastory/service/submission/: model.py  views.py
tests/: test_config.py  test_submissions.py
